new version - updates so it works on seneca again (website changed)

--- a/popup/index.html
+++ b/popup/index.html
@@ -7,7 +7,12 @@
 	<title>SenecDone</title>
 </head>
 <body>
-	<input type="checkbox" id="auto">Auto</input>
+	<label for="auto">Auto</label>
+	<input type="checkbox" id="auto">
+	<br>
+	<label for="timer">Time taken on each assignment (mins)</label>
+	<input type="number" id="time" min="0">
+	<button id="save">Save</button>
 	<script src="./index.js"></script>
 </body>
 </html>
