got rid of time option on popup added Icons, changed version

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,9 +9,9 @@
 <body>
 	<label for="auto">Auto</label>
 	<input type="checkbox" id="auto">
-	<br>
+	<!-- <br>
 	<label for="timer">Time taken on each assignment (mins)</label>
-	<input type="number" id="time" min="0">
+	<input type="number" id="time" min="0"> -->
 	<button id="save">Save</button>
 	<script src="./index.js"></script>
 </body>
