--- a/src-chrome/popup/index.html
+++ b/src-chrome/popup/index.html
@@ -4,15 +4,23 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./index.css">
 	<title>SenecDone</title>
 </head>
 <body>
-	<label for="auto">Auto</label>
-	<input type="checkbox" id="auto">
+	<div class="option">
+		<div class="text">Auto</div>
+		<div class="switch-wrapper">
+			<label class="switch">
+				<input type="checkbox" id="auto">
+				<span class="slider"></span>
+			</label>
+		</div>
+	</div>
 	<!-- <br>
 	<label for="timer">Time taken on each assignment (mins)</label>
 	<input type="number" id="time" min="0"> -->
-	<button id="save">Save</button>
+	<!-- <button id="save">Save</button> -->
 	<script src="./index.js"></script>
 </body>
 </html>
