if it halts sholuld fix itself now

--- a/src-chrome/popup/index.html
+++ b/src-chrome/popup/index.html
@@ -16,6 +16,7 @@
 				<span class="slider"></span>
 			</label>
 		</div>
+		<button id="search">Stuck? Search Again</button>	
 	</div>
 	<!-- <br>
 	<label for="timer">Time taken on each assignment (mins)</label>
